shortened class name for table on homepage

--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
   <body>
   <h1>Welcome to the Dog Database!</h1>
     <h2>For my ITMD504 project at Illinois Institute of Technology, I'll share data and content on some of my favorite dog breeds.</h2>
-    <table class="breeds_navigation_homepage">
+    <table class="breeds_nav_home">
       <caption><strong>Dog Breeds</strong></caption>
       <tr>
         <th>Terriers</th>
