added first row of breeds

--- a/homepage.html
+++ b/homepage.html
@@ -20,9 +20,11 @@
         <th>Herding</th>
       </tr>
       <tr>
-        <td>Alfreds Futterkiste</td>
-        <td>Maria Anders</td>
-        <td>Germany</td>
+        <td>Russell Terrier</td>
+        <td>Irish Wolfhound</td>
+        <td>Weimaraner</td>
+        <td>Doberman Pinscher</td>
+        <td>Pembroke Welsh Corgi</td>
       </tr>
       <tr>
         <td>Centro comercial Moctezuma</td>
