added all 7 breeds per akc website and top 2 favorites for each

--- a/homepage.html
+++ b/homepage.html
@@ -18,6 +18,8 @@
         <th>Sporting</th>
         <th>Working</th>
         <th>Herding</th>
+        <th>Toy</th>
+        <th>Non-Sporting</th>
       </tr>
       <tr>
         <td>Russell Terrier</td>
@@ -25,11 +27,17 @@
         <td>Weimaraner</td>
         <td>Doberman Pinscher</td>
         <td>Pembroke Welsh Corgi</td>
+        <td>Cavalier King Charles Spaniel</td>
+        <td>Boston Terrier</td>
       </tr>
       <tr>
-        <td>Centro comercial Moctezuma</td>
-        <td>Francisco Chang</td>
-        <td>Mexico</td>
+        <td>Border Terrier</td>
+        <td>Dachsund</td>
+        <td>Golden Retriever</td>
+        <td>Boxer</td>
+        <td>Australian Cattle Dog</td>
+        <td>Italian Greyhound</td>
+        <td>Dalmatian</td>
       </tr>
   </body>
 </html>
