testing with fonts and specific styling

--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="homestyle.css">
     <title>Dog Database</title>
   </head>
   <style>
@@ -10,7 +11,8 @@
   <body>
   <h1>Welcome to the Dog Database!</h1>
     <h2>For my ITMD504 project at Illinois Institute of Technology, I'll share data and content on some of my favorite dog breeds.</h2>
-    <table class="breeds_nav_home">
+    <p>
+    <table>
       <caption><strong>Dog Breeds</strong></caption>
       <tr>
         <th>Terriers</th>
@@ -39,5 +41,7 @@
         <td>Italian Greyhound</td>
         <td>Dalmatian</td>
       </tr>
+    </table>
+    </p>  
   </body>
 </html>
