trying nav bar and styling

--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,13 @@
     <p>
     <table>
       <caption><strong>Dog Breeds</strong></caption>
+      <div class="navbar">
+        <a href="default.asp">Home</a>
+        <a href="dog_breeds.asp">Dog Breeds</a>
+        <a href="photo_gallery.asp">Photo Gallery</a>
+        <a href="my_dog.asp">My Dog</a>
+        <a href="about_me.asp">About Me</a>
+      </div>
       <tr>
         <th>Terriers</th>
         <th>Hounds</th>
