--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Dog Database</title>
-    <link rel="stylesheet" href="customfonts.css">
+    <link rel="stylesheet" href="home_and_customfonts.css">
     <style>
     </style>   
 </head>
