added nav bar and hover styling

--- a/homepage.html
+++ b/homepage.html
@@ -2,9 +2,17 @@
 <head>
     <title>Dog Database</title>
     <link rel="stylesheet" href="home_and_customfonts.css">
-    <style>
-    </style>   
+<style>
+</style>   
 </head>
+<body>
+<ul class="topnav">
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#search-for-dog-breeds">Search for Dog Breeds</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li class="right"><a href="#about-us">About Us</a></li>
+</ul>
 <h1>Welcome to the Dog Database!</h1>
 <h2>For my ITMD504 project, I'll share data and content on some of my favorite dog breeds. </h2>
+</body>
 </html>
