installed node.js and npm; and installed react and react dom in project folder

--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
 <ul class="topnav">
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="#search-for-dog-breeds">Search for Dog Breeds</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#dog-content">Dog Content</a></li>
     <li class="right"><a href="#about-us">About Us</a></li>
 </ul>
 <h1>Welcome to the Dog Database!</h1>
